basic structure i guess

--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
     <link rel="stylesheet" href="main.css" />
     <title>Crypted</title>
   </head>
-  <body></body>
+  <body>
+
+    <content class="Homepage">
+      <nav class="nav">...</nav>
+      <content1 class="content1">...</content1>
+      <content2 class="content2">...</content2>
+      <footer class="footer">
+        <ul style="list-style-type: none;">
+          <li>temp</li>
+          <li>temp</li>
+          <li>temp</li>
+          <li>temp</li>
+          <li>temp</li>
+          <li>temp</li>
+        </ul>
+      </footer>
+    </content>
+    
+
+  </body>
 </html>
