main content and styles

--- a/index.html
+++ b/index.html
@@ -8,13 +8,72 @@
     <title>Crypted</title>
   </head>
   <body>
-
     <content class="Homepage">
       <nav class="nav">...</nav>
-      <content1 class="content1">...</content1>
-      <content2 class="content2">...</content2>
+      <div class="content-div">
+        <h1>What are they?</h1>
+        <div class="flex-content">
+          <div class="flex-child">
+            <div class="items">
+              <img src="images/bitcoin.png" alt="image" width="350px" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                blanditiis, porro, aliquam hic, quae natus saepe obcaecati quia
+                praesentium minus eos quos ipsam voluptates sit assumenda veniam
+                quas vel vitae.
+              </p>
+            </div>
+          </div>
+          <div class="flex-child">
+            <div class="items">
+              <img src="images/bitcoin.png" alt="image" width="350px" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                blanditiis, porro, aliquam hic, quae natus saepe obcaecati quia
+                praesentium minus eos quos ipsam voluptates sit assumenda veniam
+                quas vel vitae.
+              </p>
+            </div>
+          </div>
+          <div class="flex-child">
+            <div class="items">
+              <img src="images/bitcoin.png" alt="image" width="350px" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                blanditiis, porro, aliquam hic, quae natus saepe obcaecati quia
+                praesentium minus eos quos ipsam voluptates sit assumenda veniam
+                quas vel vitae.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="cryptocurrency">
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+              reiciendis pariatur quis magni repellendus nisi rerum ullam
+              perspiciatis velit, dolor quae quod repudiandae alias adipisci
+              autem qui cumque? Molestiae, ex.
+            </p>
+            <a href="">Learn More</a>
+          </div>
+          <img src="images/cryptocurrency.png" alt="" width="650px" />
+        </div>
+        <div class="cryptocurrency">
+          <img src="images/cryptocurrency2.png" alt="" width="650px" />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+              reiciendis pariatur quis magni repellendus nisi rerum ullam
+              perspiciatis velit, dolor quae quod repudiandae alias adipisci
+              autem qui cumque? Molestiae, ex.
+            </p>
+            <a href="">Learn More</a>
+          </div>
+        </div>
+      </div>
       <footer class="footer">
-        <ul style="list-style-type: none;">
+        <ul style="list-style-type: none">
           <li>temp</li>
           <li>temp</li>
           <li>temp</li>
@@ -24,7 +83,5 @@
         </ul>
       </footer>
     </content>
-    
-
   </body>
 </html>
