Created nav bar/header. Added better text to homepage.

--- a/index.html
+++ b/index.html
@@ -9,66 +9,83 @@
   </head>
   <body>
     <content class="Homepage">
-      <nav class="nav">...</nav>
+      <nav class="nav">
+        <div class="nav-bar">
+          <div class="nav-left">
+            <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
+              Crypted.
+            </div>
+          </div>
+          <div class="nav-right">
+            <div class="nav-item nav-item-right" onclick="location.href='aboutus.html';">
+              About Us
+            </div>
+            <div class="nav-item nav-item-right" onclick="location.href='nfts.html';">
+              Learn NFTs
+            </div>
+            <div class="nav-item nav-item-right" onclick="location.href='crypto.html';">
+              Learn Crypto
+            </div>
+          </div>
+        </div>
+      </nav>
       <div class="content-div">
-        <h1>What are they?</h1>
+        <h1>What is Cryptocurrency?</h1>
         <div class="flex-content">
           <div class="flex-child">
             <div class="items">
-              <img src="images/bitcoin.png" alt="image" width="350px" />
+              <img src="images/security.png" alt="image" width="350px" />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                blanditiis, porro, aliquam hic, quae natus saepe obcaecati quia
-                praesentium minus eos quos ipsam voluptates sit assumenda veniam
-                quas vel vitae.
+                Cryptocurrency is the newest cutting edge technology of the 21st
+                century. Cryptocurrency is not only a medium of exchange, but it
+                also is fueling the future in Web3 compatible sites and securing
+                the future of the internet.
               </p>
             </div>
           </div>
           <div class="flex-child">
             <div class="items">
-              <img src="images/bitcoin.png" alt="image" width="350px" />
+              <img src="images/world.png" alt="image" width="350px" />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                blanditiis, porro, aliquam hic, quae natus saepe obcaecati quia
-                praesentium minus eos quos ipsam voluptates sit assumenda veniam
-                quas vel vitae.
+                On Crypted, we will teach you all you need to know to get deeply
+                into the world of cryptocurrency. We have pages for beginners and
+                for more experienced users. Anyone can learn new things while
+                navigating our website.
               </p>
             </div>
           </div>
           <div class="flex-child">
             <div class="items">
-              <img src="images/bitcoin.png" alt="image" width="350px" />
+              <img src="images/rocket.png" alt="image" width="350px" />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                blanditiis, porro, aliquam hic, quae natus saepe obcaecati quia
-                praesentium minus eos quos ipsam voluptates sit assumenda veniam
-                quas vel vitae.
+                Scroll down or use the navigation bar to get launched into
+                the future of currency and the web.
               </p>
             </div>
           </div>
         </div>
+        <hr class="large-hr">
         <div class="cryptocurrency">
           <div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-              reiciendis pariatur quis magni repellendus nisi rerum ullam
-              perspiciatis velit, dolor quae quod repudiandae alias adipisci
-              autem qui cumque? Molestiae, ex.
+              New to Cryptocurrency? Let's teach you the basics from starting terminology,
+              how blockchain works, all the way to how to program on them. Let us guide you
+              through everything in our easy to traverse directory of information.
             </p>
-            <a href="">Learn More</a>
+            <a href="">Learn More about Cryptocurrency</a>
           </div>
-          <img src="images/cryptocurrency.png" alt="" width="650px" />
+          <img src="images/cryptocurrencies.jpeg" alt="" width="650px" class="rounded-img"/>
         </div>
+        <hr class="small-hr">
         <div class="cryptocurrency">
-          <img src="images/cryptocurrency2.png" alt="" width="650px" />
+          <img src="images/nfts.jpeg" alt="" width="650px" class="rounded-img"/>
           <div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-              reiciendis pariatur quis magni repellendus nisi rerum ullam
-              perspiciatis velit, dolor quae quod repudiandae alias adipisci
-              autem qui cumque? Molestiae, ex.
+              Want to deep dive into NFTs? Nonfungible Tokens are the newest trend within
+              the cryptocurrency space. There's a lot to learn before getting your first NFT.
+              Let's get you prepared for the wild ride of NFT minting, reselling, and investing.
             </p>
-            <a href="">Learn More</a>
+            <a href="">Learn More about NFTs</a>
           </div>
         </div>
       </div>
