--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
     <title>Crypted.</title>
   </head>
@@ -11,18 +17,30 @@
     <nav class="nav">
       <div class="nav-bar">
         <div class="nav-left">
-          <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
+          <div
+            class="brand-name nav-item nav-item-left"
+            onclick="location.href='index.html';"
+          >
             Crypted.
           </div>
         </div>
         <div class="nav-right">
-          <div class="nav-item nav-item-right" onclick="location.href='aboutus.html';">
+          <div
+            class="nav-item nav-item-right"
+            onclick="location.href='aboutus.html';"
+          >
             About Us
           </div>
-          <div class="nav-item nav-item-right" onclick="location.href='nfts.html';">
+          <div
+            class="nav-item nav-item-right"
+            onclick="location.href='nfts.html';"
+          >
             Learn NFTs
           </div>
-          <div class="nav-item nav-item-right" onclick="location.href='crypto.html';">
+          <div
+            class="nav-item nav-item-right"
+            onclick="location.href='crypto.html';"
+          >
             Learn Crypto
           </div>
         </div>
@@ -57,49 +75,56 @@
           <div class="items">
             <img src="images/rocket.png" alt="image" width="350" />
             <p>
-              Scroll down or use the navigation bar to get launched into
-              the future of currency and the web.
+              Scroll down or use the navigation bar to get launched into the
+              future of currency and the web.
             </p>
           </div>
         </div>
       </div>
-      <hr class="large-hr">
+      <hr class="large-hr" />
       <div class="cryptocurrency">
         <div>
           <p>
-            New to Cryptocurrency? Let's teach you the basics from starting terminology,
-            how blockchain works, all the way to how to program on them. Let us guide you
-            through everything in our easy to traverse directory of information.
+            New to Cryptocurrency? Let's teach you the basics from starting
+            terminology, how blockchain works, all the way to how to program on
+            them. Let us guide you through everything in our easy to traverse
+            directory of information.
           </p>
-          <a href="">Learn More about Cryptocurrency</a>
+          <a href="">Learn More</a>
         </div>
-        <img src="images/cryptocurrencies.jpeg" alt="" width="650" class="rounded-img"/>
+        <img
+          src="images/cryptocurrencies.jpeg"
+          alt=""
+          width="50%"
+          class="rounded-img"
+        />
       </div>
-      <hr class="small-hr">
+      <hr class="small-hr" />
       <div class="cryptocurrency">
-        <img src="images/nfts.jpeg" alt="" width="650" class="rounded-img"/>
+        <img src="images/nfts.jpeg" alt="" width="50%" class="rounded-img" />
         <div>
           <p>
-            Want to deep dive into NFTs? Nonfungible Tokens are the newest trend within
-            the cryptocurrency space. There's a lot to learn before getting your first NFT.
-            Let's get you prepared for the wild ride of NFT minting, reselling, and investing.
+            Want to deep dive into NFTs? Nonfungible Tokens are the newest trend
+            within the cryptocurrency space. There's a lot to learn before
+            getting your first NFT. Let's get you prepared for the wild ride of
+            NFT minting, reselling, and investing.
           </p>
-          <a href="">Learn More about NFTs</a>
+          <a href="">Learn More</a>
         </div>
       </div>
     </div>
     <footer class="footer">
       <div id="footer_about">
-        <h3>About us:</h3>
+        <h2>Crypted.</h2>
         <p>
-          On Crypted, we will teach you all you need to know to get deeply
-          into the world of cryptocurrency. We have pages for beginners and
-          for more experienced users. Anyone can learn new things while
-          navigating our website.
+          On Crypted, we will teach you all you need to know to get deeply into
+          the world of cryptocurrency. We have pages for beginners and for more
+          experienced users. Anyone can learn new things while navigating our
+          website.
         </p>
       </div>
       <div id="footer_crypto">
-        <h3>Cryptocurrency</h3>
+        <h2>Cryptocurrency</h2>
         <div id="footer_crypto_ul">
           <ul>
             <li><a href="">Cryptocurrency Information Directory</a></li>
@@ -110,7 +135,7 @@
         </div>
       </div>
       <div id="footer_NFT">
-        <h3>NFT</h3>
+        <h2>NFT</h2>
         <div id="footer_NFT_ul">
           <ul>
             <li><a href="">NFT Information Directory</a></li>
@@ -121,10 +146,15 @@
         </div>
       </div>
       <div id="footer_signup">
-        <h3>Sign up now and get updates from our newsletter.</h3>
-        <br>Our newsletter delivers once a week.<br>
+        <h2>Sign up now and get updates from our newsletter.</h2>
+        <br />Our newsletter delivers once a week.<br />
         <label for="email_input">Your Email:</label>
-        <input class="text_input" type="text" id="email_input" name="fname"><br><br>
+        <input
+          class="text_input"
+          type="text"
+          id="email_input"
+          name="fname"
+        /><br /><br />
         <button onclick="document.getElementById('email_input').value = ''">
           Submit
         </button>
