removed extra br tag that caused extra space on footer. Kevin, just a heads up I use code formatter so the html in crypto-terms.html will be formatted

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
       <div id="footer_signup">
         <h2>Sign up now and get updates from our newsletter.</h2>
-        <br />Our newsletter delivers once a week.<br />
+        Our newsletter delivers once a week.<br />
         <label for="email_input">Your Email:</label>
         <input
           class="text_input"
