--- a/crypto-terms.html
+++ b/crypto-terms.html
@@ -47,130 +47,120 @@
         </div>
       </div>
     </nav>
-    
+
     <div class="content">
-        <h1 class="title">Common Crypto Terms</h1> 
-        <table class="terms">
-            <tr>
-                <td class="term">
-                    Cryptocurrency
-                </td>
-                <td class="definition"> 
-                    Digital money which uses encryption and consensus algorithms
-                    to regulate the generation of coins/tokens and transfer of funds.
-                    Cryptocurrencies are generally decentralized, operating
-                    independently of central authorities.
-                </td>
-            </tr>
-            <tr>
-                <td class="term">
-                    Address
-                </td>
-                <td class="definition"> 
-                    Much like a URL, a blockchain address is the location to or from
-                    which transactions occur on the blockchain.
-                </td>
-            </tr>
-            <tr>
-                <td class="term">
-                    Wallet
-                </td>
-                <td class="definition"> 
-                    A digital file that holds coins and tokens held by the owner.
-                    The wallet also has a blockchain address to which transactions
-                    can be sent.
-                </td>
-            </tr>
-            <tr>
-                <td class="term">
-                    Blockchain
-                </td>
-                <td class="definition"> 
-                    A mathematical structure for storing digital transactions or
-                    data in an immutable, distributed, decentralized digital ledger
-                    consisting of blocks that are linked via cryptographic signature
-                    that is nearly impossible to fake, hack or disrupt.
-                </td>
-            </tr>
-            <tr>
-                <td class="term">
-                    Block
-                </td>
-                <td class="definition"> 
-                    A group of transactions entered into a blockchain; analogous
-                    to a page of a ledger or record book.
-                </td>
-            </tr>
-            <tr>
-                <td class="term">
-                    Public/Private Key
-                </td>
-                <td class="definition"> 
-                    A public key is a unique string of characters derived from a
-                    private key which is used to encrypt a message or data. The
-                    private key is used to decrypt the message or data.
-                </td>
-            </tr>
-            <tr>
-                <td class="term">
-                    Smart Contract
-                </td>
-                <td class="definition"> 
-                    Self-executing computer code deployed on a blockchain to
-                    perform a function, often, but not always, the exchange of
-                    value between a buyer and a seller.
-                </td>
-            </tr>
-        </table>
-        <a class="definition_source" href="https://comptiacdn.azureedge.net/webcontent/docs/default-source/research-reports/07576-blockchain-glossary-of-terms-r3.pdf">Source</a> 
+      <h1 class="title">Common Crypto Terms</h1>
+      <table class="terms">
+        <tr>
+          <td class="term">Cryptocurrency</td>
+          <td class="definition">
+            Digital money which uses encryption and consensus algorithms to
+            regulate the generation of coins/tokens and transfer of funds.
+            Cryptocurrencies are generally decentralized, operating
+            independently of central authorities.
+          </td>
+        </tr>
+        <tr>
+          <td class="term">Address</td>
+          <td class="definition">
+            Much like a URL, a blockchain address is the location to or from
+            which transactions occur on the blockchain.
+          </td>
+        </tr>
+        <tr>
+          <td class="term">Wallet</td>
+          <td class="definition">
+            A digital file that holds coins and tokens held by the owner. The
+            wallet also has a blockchain address to which transactions can be
+            sent.
+          </td>
+        </tr>
+        <tr>
+          <td class="term">Blockchain</td>
+          <td class="definition">
+            A mathematical structure for storing digital transactions or data in
+            an immutable, distributed, decentralized digital ledger consisting
+            of blocks that are linked via cryptographic signature that is nearly
+            impossible to fake, hack or disrupt.
+          </td>
+        </tr>
+        <tr>
+          <td class="term">Block</td>
+          <td class="definition">
+            A group of transactions entered into a blockchain; analogous to a
+            page of a ledger or record book.
+          </td>
+        </tr>
+        <tr>
+          <td class="term">Public/Private Key</td>
+          <td class="definition">
+            A public key is a unique string of characters derived from a private
+            key which is used to encrypt a message or data. The private key is
+            used to decrypt the message or data.
+          </td>
+        </tr>
+        <tr>
+          <td class="term">Smart Contract</td>
+          <td class="definition">
+            Self-executing computer code deployed on a blockchain to perform a
+            function, often, but not always, the exchange of value between a
+            buyer and a seller.
+          </td>
+        </tr>
+      </table>
+      <a
+        class="definition_source"
+        href="https://comptiacdn.azureedge.net/webcontent/docs/default-source/research-reports/07576-blockchain-glossary-of-terms-r3.pdf"
+        >Source</a
+      >
     </div>
 
     <footer class="footer">
-        <div id="footer_about">
-          <h2>Crypted.</h2>
-          <p>
-            On Crypted, we will teach you all you need to know to get deeply into
-            the world of cryptocurrency. We have pages for beginners and for more
-            experienced users. Anyone can learn new things while navigating our
-            website.
-          </p>
+      <div id="footer_about">
+        <h2>Crypted.</h2>
+        <p>
+          On Crypted, we will teach you all you need to know to get deeply into
+          the world of cryptocurrency. We have pages for beginners and for more
+          experienced users. Anyone can learn new things while navigating our
+          website.
+        </p>
+      </div>
+      <div id="footer_crypto">
+        <h2>Cryptocurrency</h2>
+        <div id="footer_crypto_ul">
+          <ul>
+            <li><a href="">Cryptocurrency Information Directory</a></li>
+            <li><a href="">What is Cryptocurrency?</a></li>
+            <li><a href="">Common Cryptocurrency Terms</a></li>
+            <li><a href="">What is Web3?</a></li>
+          </ul>
         </div>
-        <div id="footer_crypto">
-          <h2>Cryptocurrency</h2>
-          <div id="footer_crypto_ul">
-            <ul>
-              <li><a href="">Cryptocurrency Information Directory</a></li>
-              <li><a href="">What is Cryptocurrency?</a></li>
-              <li><a href="">Common Cryptocurrency Terms</a></li>
-              <li><a href="">What is Web3?</a></li>
-            </ul>
-          </div>
+      </div>
+      <div id="footer_NFT">
+        <h2>NFT</h2>
+        <div id="footer_NFT_ul">
+          <ul>
+            <li><a href="">NFT Information Directory</a></li>
+            <li><a href="">What is an NFT?</a></li>
+            <li><a href="">Common NFT Terms</a></li>
+            <li><a href="">NFT Deep Dive?</a></li>
+          </ul>
         </div>
-        <div id="footer_NFT">
-          <h2>NFT</h2>
-          <div id="footer_NFT_ul">
-            <ul>
-              <li><a href="">NFT Information Directory</a></li>
-              <li><a href="">What is an NFT?</a></li>
-              <li><a href="">Common NFT Terms</a></li>
-              <li><a href="">NFT Deep Dive?</a></li>
-            </ul>
-          </div>
-        </div>
-        <div id="footer_signup">
-          <h2>Sign up now and get updates from our newsletter.</h2>
-          <br />Our newsletter delivers once a week.<br />
-          <label for="email_input">Your Email:</label>
-          <input
-            class="text_input"
-            type="text"
-            id="email_input"
-            name="fname"
-          /><br /><br />
-          <button onclick="document.getElementById('email_input').value = ''">
-            Submit
-          </button>
-        </div>
-      </footer>
-    </body>
-  </html>
+      </div>
+      <div id="footer_signup">
+        <h2>Sign up now and get updates from our newsletter.</h2>
+        Our newsletter delivers once a week.<br />
+        <label for="email_input">Your Email:</label>
+        <input
+          class="text_input"
+          type="text"
+          id="email_input"
+          name="fname"
+        /><br /><br />
+        <button onclick="document.getElementById('email_input').value = ''">
+          Submit
+        </button>
+      </div>
+    </footer>
+  </body>
+</html>
