Made navbar better. (Updated everywhere) Fixed links to everything. (Updated everywhere) Prepared the HTML files for all unfinished pages.

--- a/aboutus.html
+++ b/aboutus.html
@@ -18,31 +18,33 @@
     <nav class="nav">
       <div class="nav-bar">
         <div class="nav-left">
-          <div
-            class="brand-name nav-item nav-item-left"
-            onclick="location.href='index.html';"
-          >
+          <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
             Crypted.
           </div>
         </div>
         <div class="nav-right">
-          <div
-            class="nav-item nav-item-right"
-            onclick="location.href='aboutus.html';"
-          >
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
             About Us
+            <div class="dropdown-content">
+              <a href="contactus.html">Contact Us</a>
+            </div>
           </div>
-          <div
-            class="nav-item nav-item-right"
-            onclick="location.href='nfts.html';"
-          >
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
             Learn NFTs
+            <div class="dropdown-content">
+              <a href="whatarenfts.html">What are NFTs?</a>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
+            </div>
           </div>
-          <div
-            class="nav-item nav-item-right"
-            onclick="location.href='crypto.html';"
-          >
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
             Learn Crypto
+            <div class="dropdown-content">
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
+            </div>
           </div>
         </div>
       </div>
@@ -129,25 +131,26 @@
           website.
         </p>
       </div>
-      <div id="footer_crypto">
-        <h2>Cryptocurrency</h2>
-        <div id="footer_crypto_ul">
-          <ul>
-            <li><a href="">Cryptocurrency Information Directory</a></li>
-            <li><a href="">What is Cryptocurrency?</a></li>
-            <li><a href="">Common Cryptocurrency Terms</a></li>
-            <li><a href="">What is Web3?</a></li>
-          </ul>
-        </div>
-      </div>
       <div id="footer_NFT">
         <h2>NFT</h2>
         <div id="footer_NFT_ul">
           <ul>
-            <li><a href="">NFT Information Directory</a></li>
-            <li><a href="">What is an NFT?</a></li>
-            <li><a href="">Common NFT Terms</a></li>
-            <li><a href="">NFT Deep Dive?</a></li>
+            <li><a href="learnnfts.html">Learn NFTs</a></li>
+            <li><a href="whatarenfts.html">What are NFTs?</a></li>
+            <li><a href="commonnftterms.html">Common NFT Terms</a></li>
+            <li><a href="commonnftscams.html">Common NFT Scams</a></li>
+            <li><a href="thisweekinnfts.html">This Week in NFTs</a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="footer_crypto">
+        <h2>Cryptocurrency</h2>
+        <div id="footer_crypto_ul">
+          <ul>
+            <li><a href="learncrypto.html">Learn Crypto</a></li>
+            <li><a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a></li>
+            <li><a href="commoncryptoterms.html">Common Crypto Terms</a></li>
+            <li><a href="commoncryptoscams.html">Common Crypto Scams</a></li>
           </ul>
         </div>
       </div>
@@ -155,12 +158,7 @@
         <h2>Sign up now and get updates from our newsletter.</h2>
         Our newsletter delivers once a week.<br />
         <label for="email_input">Your Email:</label>
-        <input
-          class="text_input"
-          type="text"
-          id="email_input"
-          name="fname"
-        /><br /><br />
+        <input class="text_input" type="text" id="email_input" name="fname" /><br /><br />
         <button onclick="document.getElementById('email_input').value = ''">
           Submit
         </button>
