--- a/index.html
+++ b/index.html
@@ -21,20 +21,34 @@
         </div>
       </div>
       <div class="nav-right">
-        <div class="nav-item nav-item-right" onclick="location.href='aboutus.html';">
+        <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
           About Us
+          <div class="dropdown-content">
+            <a href="contactus.html">Contact Us</a>
+          </div>
         </div>
-        <div class="nav-item nav-item-right" onclick="location.href='nfts.html';">
+        <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
           Learn NFTs
+          <div class="dropdown-content">
+            <a href="whatarenfts.html">What are NFTs?</a>
+            <a href="commonnftterms.html">Common NFT Terms</a>
+            <a href="commonnftscams.html">Common NFT Scams</a>
+            <a href="thisweekinnfts.html">This Week in NFTs</a>
+          </div>
         </div>
-        <div class="nav-item nav-item-right" onclick="location.href='crypto.html';">
+        <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
           Learn Crypto
+          <div class="dropdown-content">
+            <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+            <a href="commoncryptoterms.html">Common Crypto Terms</a>
+            <a href="commoncryptoscams.html">Common Crypto Scams</a>
+          </div>
         </div>
       </div>
     </div>
   </nav>
   <div class="content-div">
-    <h1>What is Cryptocurrency?</h1>
+    <h1>Welcome to Crypted!</h1>
     <div class="flex-content">
       <div class="flex-child">
         <div class="items">
@@ -77,7 +91,7 @@
           them. Let us guide you through everything in our easy to traverse
           directory of information.
         </p>
-        <a href="">Learn More</a>
+        <a href="learncrypto.html">Learn More</a>
       </div>
       <img src="images/cryptocurrencies.jpeg" alt="" width="50%" class="rounded-img" />
     </div>
@@ -91,7 +105,7 @@
           getting your first NFT. Let's get you prepared for the wild ride of
           NFT minting, reselling, and investing.
         </p>
-        <a href="">Learn More</a>
+        <a href="learnnfts.html">Learn More</a>
       </div>
     </div>
   </div>
@@ -105,25 +119,26 @@
         website.
       </p>
     </div>
-    <div id="footer_crypto">
-      <h2>Cryptocurrency</h2>
-      <div id="footer_crypto_ul">
-        <ul>
-          <li><a href="">Cryptocurrency Information Directory</a></li>
-          <li><a href="">What is Cryptocurrency?</a></li>
-          <li><a href="">Common Cryptocurrency Terms</a></li>
-          <li><a href="">What is Web3?</a></li>
-        </ul>
-      </div>
-    </div>
     <div id="footer_NFT">
       <h2>NFT</h2>
       <div id="footer_NFT_ul">
         <ul>
-          <li><a href="">NFT Information Directory</a></li>
-          <li><a href="">What is an NFT?</a></li>
-          <li><a href="">Common NFT Terms</a></li>
-          <li><a href="">NFT Deep Dive?</a></li>
+          <li><a href="learnnfts.html">Learn NFTs</a></li>
+          <li><a href="whatarenfts.html">What are NFTs?</a></li>
+          <li><a href="commonnftterms.html">Common NFT Terms</a></li>
+          <li><a href="commonnftscams.html">Common NFT Scams</a></li>
+          <li><a href="thisweekinnfts.html">This Week in NFTs</a></li>
+        </ul>
+      </div>
+    </div>
+    <div id="footer_crypto">
+      <h2>Cryptocurrency</h2>
+      <div id="footer_crypto_ul">
+        <ul>
+          <li><a href="learncrypto.html">Learn Crypto</a></li>
+          <li><a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a></li>
+          <li><a href="commoncryptoterms.html">Common Crypto Terms</a></li>
+          <li><a href="commoncryptoscams.html">Common Crypto Scams</a></li>
         </ul>
       </div>
     </div>
