--- a/thisweekinnfts.html
+++ b/thisweekinnfts.html
@@ -18,31 +18,33 @@
     <nav class="nav">
       <div class="nav-bar">
         <div class="nav-left">
-          <div
-            class="brand-name nav-item nav-item-left"
-            onclick="location.href='index.html';"
-          >
+          <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
             Crypted.
           </div>
         </div>
         <div class="nav-right">
-          <div
-            class="nav-item nav-item-right"
-            onclick="location.href='aboutus.html';"
-          >
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
             About Us
+            <div class="dropdown-content">
+              <a href="contactus.html">Contact Us</a>
+            </div>
           </div>
-          <div
-            class="nav-item nav-item-right"
-            onclick="location.href='nfts.html';"
-          >
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
             Learn NFTs
+            <div class="dropdown-content">
+              <a href="whatarenfts.html">What are NFTs?</a>
+              <a href="commonnftterms.html">Common NFT Terms</a>
+              <a href="commonnftscams.html">Common NFT Scams</a>
+              <a href="thisweekinnfts.html">This Week in NFTs</a>
+            </div>
           </div>
-          <div
-            class="nav-item nav-item-right"
-            onclick="location.href='crypto.html';"
-          >
+          <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
             Learn Crypto
+            <div class="dropdown-content">
+              <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+              <a href="commoncryptoterms.html">Common Crypto Terms</a>
+              <a href="commoncryptoscams.html">Common Crypto Scams</a>
+            </div>
           </div>
         </div>
       </div>
@@ -143,7 +145,7 @@
         </div>
         <div class="contactus_link">
             <a>
-                Please contact us if you'd like to add your own even to the page!
+                Please contact us if you'd like to add your own event to the page!
             </a>
         </div>
         
