--- a/blog.html
+++ b/blog.html
@@ -1,114 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="blog.css" />
-    <title>Crypted.</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="blog.css" />
+        <title>Crypted.</title>
+    </head>
 
-<body>
-    <nav class="nav">
-        <div class="nav-bar">
+    <body>
+        <nav class="nav">
+            <div class="nav-bar">
             <div class="nav-left">
                 <div class="brand-name nav-item nav-item-left" onclick="location.href='index.html';">
-                    Crypted.
+                Crypted.
                 </div>
             </div>
             <div class="nav-right">
-                <div class="nav-item nav-item-right" onclick="location.href='aboutus.html';">
-                    About Us
+                <div class="nav-item nav-item-right dropdown" onclick="location.href='aboutus.html';">
+                About Us
+                <div class="dropdown-content">
+                    <a href="contactus.html">Contact Us</a>
                 </div>
-                <div class="nav-item nav-item-right" onclick="location.href='nfts.html';">
-                    Learn NFTs
                 </div>
-                <div class="nav-item nav-item-right" onclick="location.href='crypto.html';">
-                    Learn Crypto
+                <div class="nav-item nav-item-right dropdown" onclick="location.href='learnnfts.html';">
+                Learn NFTs
+                <div class="dropdown-content">
+                    <a href="whatarenfts.html">What are NFTs?</a>
+                    <a href="commonnftterms.html">Common NFT Terms</a>
+                    <a href="commonnftscams.html">Common NFT Scams</a>
+                    <a href="thisweekinnfts.html">This Week in NFTs</a>
                 </div>
+                </div>
+                <div class="nav-item nav-item-right dropdown" onclick="location.href='learncrypto.html';">
+                Learn Crypto
+                <div class="dropdown-content">
+                    <a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a>
+                    <a href="commoncryptoterms.html">Common Crypto Terms</a>
+                    <a href="commoncryptoscams.html">Common Crypto Scams</a>
+                </div>
+                </div>
+            </div>
+            </div>
+        </nav>
+
+
+        <div class="blog">
+            <div class="blog-header">
+                <h1 id="blog-header-text"> TITLE GOES HERE</h1>
+            </div>
+            <div class="blog-content">
+                <div id="blog-block1">
+
+                </div>
+                <div id="blog-block2">
+                    <div id="blog-sharebar">
+                        <p> Share: </p>
+                        <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+                        <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
+                        <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
+                        <a href="https://www.reddit.com/" target="_blank" class="fa fa-reddit"></a>
+                    </div>
+                    <div id="blog-text">
+                        <h1><b>Introduction to ---------</b></h1><br>
+                        <p>This is text that can be replaced with content. This is text that can be replaced with
+                            content.This is text that can be
+                            replaced with content.This is text that can be replaced with content.This is text that can be
+                            replaced with content.
+                            This is text that can be replaced with content.This is text that can be replaced with
+                            content.This is text that can be
+                            replaced with content.This is text that can be replaced with content.This is text that can be
+                            replaced with content.
+                            This is text that can be replaced with content.This is text that can be replaced with
+                            content.This is text that can be
+                            replaced with content.This is text that can be replaced with content.This is text that can be
+                            replaced with content.
+                            This is text that can be replaced with content.This is text that can be replaced with
+                            content.This is text that can be
+                            replaced with content.This is text that can be replaced with content.This is text that can be
+                            replaced with content.
+                            This is text that can be replaced with content.This is text that can be replaced with
+                            content.This is text that can be
+                            replaced with content.This is text that can be replaced with content.This is text that can be
+                            replaced with content.</p>
+                        <br>
+                        This is text that can be replaced with content. This is text that can be replaced with content.This
+                        is text that can be
+                        replaced with content.This is text that can be replaced with content.This is text that can be
+                        replaced with content.
+                        This is text that can be replaced with content.This is text that can be replaced with content.This
+                        is text that can be
+                        replaced with content.This is text that can be replaced with content.This is text that can be
+                        replaced with content.
+                        This is text that can be replaced with content.This is text that can be replaced with content.This
+                        is text that can be
+                        replaced with content.This is text that can be replaced with content.This is text that can be
+                        replaced with content.
+                        This is text that can be replaced with content.This is text that can be replaced with content.This
+                        is text that can be
+                        replaced with content.This is text that can be replaced with content.This is text that can be
+                        replaced with content.
+                        This is text that can be replaced with content.This is text that can be replaced with content.This
+                        is text that can be
+                        replaced with content.This is text that can be replaced with content.This is text that can be
+                        replaced with content.
+                        <br>
+
+                    </div>
+                </div>
+                <div id="blog-block3">
+
+                </div>
+
             </div>
         </div>
-    </nav>
 
-
-    <div class="blog">
-        <div class="blog-header">
-            <h1 id="blog-header-text"> TITLE GOES HERE</h1>
-        </div>
-        <div class="blog-content">
-            <div id="blog-block1">
-
-            </div>
-            <div id="blog-block2">
-                <div id="blog-sharebar">
-                    <p> Share: </p>
-                    <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
-                    <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
-                    <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
-                    <a href="https://www.reddit.com/" target="_blank" class="fa fa-reddit"></a>
-                </div>
-                <div id="blog-text">
-                    <h1><b>Introduction to ---------</b></h1><br>
-                    <p>This is text that can be replaced with content. This is text that can be replaced with
-                        content.This is text that can be
-                        replaced with content.This is text that can be replaced with content.This is text that can be
-                        replaced with content.
-                        This is text that can be replaced with content.This is text that can be replaced with
-                        content.This is text that can be
-                        replaced with content.This is text that can be replaced with content.This is text that can be
-                        replaced with content.
-                        This is text that can be replaced with content.This is text that can be replaced with
-                        content.This is text that can be
-                        replaced with content.This is text that can be replaced with content.This is text that can be
-                        replaced with content.
-                        This is text that can be replaced with content.This is text that can be replaced with
-                        content.This is text that can be
-                        replaced with content.This is text that can be replaced with content.This is text that can be
-                        replaced with content.
-                        This is text that can be replaced with content.This is text that can be replaced with
-                        content.This is text that can be
-                        replaced with content.This is text that can be replaced with content.This is text that can be
-                        replaced with content.</p>
-                    <br>
-                    This is text that can be replaced with content. This is text that can be replaced with content.This
-                    is text that can be
-                    replaced with content.This is text that can be replaced with content.This is text that can be
-                    replaced with content.
-                    This is text that can be replaced with content.This is text that can be replaced with content.This
-                    is text that can be
-                    replaced with content.This is text that can be replaced with content.This is text that can be
-                    replaced with content.
-                    This is text that can be replaced with content.This is text that can be replaced with content.This
-                    is text that can be
-                    replaced with content.This is text that can be replaced with content.This is text that can be
-                    replaced with content.
-                    This is text that can be replaced with content.This is text that can be replaced with content.This
-                    is text that can be
-                    replaced with content.This is text that can be replaced with content.This is text that can be
-                    replaced with content.
-                    This is text that can be replaced with content.This is text that can be replaced with content.This
-                    is text that can be
-                    replaced with content.This is text that can be replaced with content.This is text that can be
-                    replaced with content.
-                    <br>
-
-                </div>
-            </div>
-            <div id="blog-block3">
-
-            </div>
-
-        </div>
-    </div>
-
-    <footer class="footer">
-        <div id="footer_about">
+        <footer class="footer">
+            <div id="footer_about">
             <h2>Crypted.</h2>
             <p>
                 On Crypted, we will teach you all you need to know to get deeply into
@@ -116,39 +130,40 @@
                 experienced users. Anyone can learn new things while navigating our
                 website.
             </p>
-        </div>
-        <div id="footer_crypto">
-            <h2>Cryptocurrency</h2>
-            <div id="footer_crypto_ul">
-                <ul>
-                    <li><a href="">Cryptocurrency Information Directory</a></li>
-                    <li><a href="">What is Cryptocurrency?</a></li>
-                    <li><a href="">Common Cryptocurrency Terms</a></li>
-                    <li><a href="">What is Web3?</a></li>
-                </ul>
             </div>
-        </div>
-        <div id="footer_NFT">
+            <div id="footer_NFT">
             <h2>NFT</h2>
             <div id="footer_NFT_ul">
                 <ul>
-                    <li><a href="">NFT Information Directory</a></li>
-                    <li><a href="">What is an NFT?</a></li>
-                    <li><a href="">Common NFT Terms</a></li>
-                    <li><a href="">NFT Deep Dive?</a></li>
+                <li><a href="learnnfts.html">Learn NFTs</a></li>
+                <li><a href="whatarenfts.html">What are NFTs?</a></li>
+                <li><a href="commonnftterms.html">Common NFT Terms</a></li>
+                <li><a href="commonnftscams.html">Common NFT Scams</a></li>
+                <li><a href="thisweekinnfts.html">This Week in NFTs</a></li>
                 </ul>
             </div>
-        </div>
-        <div id="footer_signup">
+            </div>
+            <div id="footer_crypto">
+            <h2>Cryptocurrency</h2>
+            <div id="footer_crypto_ul">
+                <ul>
+                <li><a href="learncrypto.html">Learn Crypto</a></li>
+                <li><a href="whatarecryptocurrencies.html">What are Cryptocurrencies?</a></li>
+                <li><a href="commoncryptoterms.html">Common Crypto Terms</a></li>
+                <li><a href="commoncryptoscams.html">Common Crypto Scams</a></li>
+                </ul>
+            </div>
+            </div>
+            <div id="footer_signup">
             <h2>Sign up now and get updates from our newsletter.</h2>
-            <br />Our newsletter delivers once a week.<br />
+            Our newsletter delivers once a week.<br />
             <label for="email_input">Your Email:</label>
             <input class="text_input" type="text" id="email_input" name="fname" /><br /><br />
             <button onclick="document.getElementById('email_input').value = ''">
                 Submit
             </button>
-        </div>
-    </footer>
-</body>
+            </div>
+        </footer>
+    </body>
 
 </html>
