Finished scam template. Updated social link box from blog. Added socials to other pages.

--- a/commoncryptoterms.html
+++ b/commoncryptoterms.html
@@ -10,8 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="terms.css" />
+    <link rel="stylesheet" href="blog.css" />
     <title>Crypted.</title>
   </head>
   <body>
@@ -51,6 +53,13 @@
     </nav>
 
     <div class="content">
+      <div id="blog-sharebar">
+        <a> Share: </a>
+        <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://www.linkedin.com/" target="_blank" class="fa fa-linkedin"></a>
+        <a href="https://www.reddit.com/" target="_blank" class="fa fa-reddit"></a>
+      </div>
       <h1 class="title">Common Crypto Terms</h1>
       <table class="terms">
         <tr>
